--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = /home/inventories/inventory
+inventory = ../inventories/inventory
 remote_user = vagrant
 host_key_checking = False
 retry_files_enabled = False
