--- a/roles/bendin/tasks/main.yml
+++ b/roles/bendin/tasks/main.yml
@@ -20,7 +20,7 @@
 
     - name: NGINX | Create NGINX config file from template
       template:
-        src: templates/nginx.conf.j2
+        src: files/nginx.conf.j2
         dest: /etc/nginx/nginx.conf
       notify:
         - reload nginx
